--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -119,6 +119,9 @@
     <Compile Include="Db\SqlServer2005\SqlServer2005ConnectionStringBuilderTestFixture.cs" />
     <Compile Include="Db\SqlServer2005\SqlServer2005SchemaProviderTestFixture.cs" />
     <Compile Include="Db\SqlServer2005\SqlServer2005TypeMapperTestFixture.cs" />
+    <Compile Include="Integration\DbPlatformIntegrationTestsBase.cs" />
+    <Compile Include="Integration\SqlCeIntegrationTests.cs" />
+    <Compile Include="Integration\SQLiteIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
