--- a/src/octalforty.Wizardby.Ci.MSBuild/octalforty.Wizardby.Ci.MSBuild.csproj
+++ b/src/octalforty.Wizardby.Ci.MSBuild/octalforty.Wizardby.Ci.MSBuild.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4D710E16-9464-49BB-9447-20E55A607FAB}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="DatabaseTaskBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SynchronizeDatabases.cs" />
