--- a/src/octalforty.Wizardby.Db.SQLite/octalforty.Wizardby.Db.SQLite.csproj
+++ b/src/octalforty.Wizardby.Db.SQLite/octalforty.Wizardby.Db.SQLite.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteConnectionStringBuilder.cs" />
     <Compile Include="SQLiteDeploymentManager.cs" />
