--- a/src/octalforty.Wizardby.Db.SqlServer2008/octalforty.Wizardby.Db.SqlServer2008.csproj
+++ b/src/octalforty.Wizardby.Db.SqlServer2008/octalforty.Wizardby.Db.SqlServer2008.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer2008Platform.cs" />
     <Compile Include="SqlServer2008SchemaProvider.cs" />
