--- a/src/octalforty.Wizardby.Db.SQLite/octalforty.Wizardby.Db.SQLite.csproj
+++ b/src/octalforty.Wizardby.Db.SQLite/octalforty.Wizardby.Db.SQLite.csproj
@@ -85,7 +85,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite, Version=1.0.65.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\SQLite\System.Data.SQLite.dll</HintPath>
+      <HintPath>..\..\lib\SQLite\bin\$(Platform)\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
