--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -97,7 +97,7 @@
     </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.65.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\SQLite\System.Data.SQLite.DLL</HintPath>
+      <HintPath>..\..\lib\SQLite\bin\$(Platform)\System.Data.SQLite.DLL</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
