--- a/src/octalforty.Wizardby.Db.SqlServer2008/octalforty.Wizardby.Db.SqlServer2008.csproj
+++ b/src/octalforty.Wizardby.Db.SqlServer2008/octalforty.Wizardby.Db.SqlServer2008.csproj
@@ -10,12 +10,13 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>octalforty.Wizardby.Db.SqlServer2008</RootNamespace>
     <AssemblyName>octalforty.Wizardby.Db.SqlServer2008</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -96,6 +97,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer2008Platform.cs" />
     <Compile Include="SqlServer2008SchemaProvider.cs" />
+    <Compile Include="SqlServer2008TypeMapper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\octalforty.Wizardby.Core\octalforty.Wizardby.Core.csproj">
@@ -106,9 +111,6 @@
       <Project>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</Project>
       <Name>octalforty.Wizardby.Db</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
