Add support for on-update and on-delete

--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -507,6 +507,7 @@
     <Compile Include="SemanticModel\ISchemaElementDefinitionCollection.cs" />
     <Compile Include="SemanticModel\ISchemaElementDefinition.cs" />
     <Compile Include="SemanticModel\ITableDefinition.cs" />
+    <Compile Include="SemanticModel\ReferenceCascadeAction.cs" />
     <Compile Include="SemanticModel\ReferenceDefinition.cs">
       <SubType>Code</SubType>
     </Compile>
