Add support for SQL Server 2008 clustered indexes

--- a/src/octalforty.Wizardby.Tests/App.config
+++ b/src/octalforty.Wizardby.Tests/App.config
@@ -4,4 +4,4 @@
 		<add key="connectionString" value="data source=test"/>
 		<add key="secondaryConnectionString" value="data source=test2"/>
 	</appSettings>
-	<startup/></configuration>
+	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
