--- a/src/octalforty.Wizardby.Db.SqlServer2008/octalforty.Wizardby.Db.SqlServer2008.csproj
+++ b/src/octalforty.Wizardby.Db.SqlServer2008/octalforty.Wizardby.Db.SqlServer2008.csproj
@@ -95,8 +95,10 @@
       <Link>AssemblyVersion.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlServer2008Dialect.cs" />
     <Compile Include="SqlServer2008Platform.cs" />
     <Compile Include="SqlServer2008SchemaProvider.cs" />
+    <Compile Include="SqlServer2008ScriptGenerator.cs" />
     <Compile Include="SqlServer2008TypeMapper.cs" />
   </ItemGroup>
   <ItemGroup>
