--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -15,7 +15,8 @@
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -25,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -94,15 +96,9 @@
     <Reference Include="System.Data.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data.SQLite, Version=1.0.65.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\SQLite\bin\$(Platform)\System.Data.SQLite.DLL</HintPath>
-    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ci\MSBuild\SynchronizeDatabasesTestFixture.cs" />
-    <Compile Include="Ci\MSBuild\UpgradeDatabaseTestFixture.cs" />
     <Compile Include="Console\Deployment\DeploymentInfoParserTestFixture.cs" />
     <Compile Include="Console\InfoMigrationCommandTestFixture.cs" />
     <Compile Include="Console\MigrationCommandRegistryTestFixture.cs" />
@@ -134,14 +130,12 @@
     <Compile Include="Core\DbmlImporterTestFixture.cs" />
     <Compile Include="Core\Db\DbStatementBatchWriterTestFixture.cs" />
     <Compile Include="Core\Db\DbTypeMapperBaseTestFixture.cs" />
-    <Compile Include="Core\Migration\Impl\DbMigrationVersionInfoManagerTestFixture.cs" />
     <Compile Include="Core\Migration\Impl\FileSystemNativeSqlResourceProviderTestFixture.cs" />
     <Compile Include="Core\Migration\Impl\MigrationModeSelectorTestFixture.cs" />
     <Compile Include="Core\Migration\Impl\MigrationScriptExecutive.cs" />
     <Compile Include="Core\Migration\Impl\MigrationScriptSelectorTestFixture.cs" />
     <Compile Include="Core\Migration\Impl\MigrationServiceTestFixture.cs" />
     <Compile Include="Core\Migration\Impl\MigrationVersionInfoManager.cs" />
-    <Compile Include="Core\ReverseEngineering\Impl\ReverseEngineeringServiceTestFixture.cs" />
     <Compile Include="Core\SemanticModel\SchemaTestFixture.cs" />
     <Compile Include="Core\SemanticModel\SemanticModelUtilTestFixture.cs" />
     <Compile Include="Core\SemanticModel\TableDefinitionTestFixture.cs" />
@@ -149,7 +143,6 @@
     <Compile Include="Db\DbSchemaProviderTestFixtureBase.cs" />
     <Compile Include="Db\Jet\JetConnectionStringBuilderTestFixture.cs" />
     <Compile Include="Db\SqlCe\SqlCeConnectionStringBuilderTestFixture.cs" />
-    <Compile Include="Db\SQLite\SQLitePlatformTestFixture.cs" />
     <Compile Include="Db\SqlServer2000\SqlServer2000ConnectionStringBuilderTestFixture.cs" />
     <Compile Include="Db\SqlServer2000\SqlServer2000DialectTestFixture.cs" />
     <Compile Include="Db\SqlServer2000\SqlServer2000SchemaProviderTestFixture.cs" />
@@ -160,7 +153,6 @@
     <Compile Include="Db\SqlServer2005\SqlServer2005TypeMapperTestFixture.cs" />
     <Compile Include="Integration\DbPlatformIntegrationTestsBase.cs" />
     <Compile Include="Integration\SqlCeIntegrationTests.cs" />
-    <Compile Include="Integration\SQLiteIntegrationTests.cs" />
     <Compile Include="Integration\SqlServer2005IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -170,28 +162,6 @@
     </Compile>
     <Compile Include="Util\MigrationServiceUtil.cs" />
     <Compile Include="Util\PathUtil.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\octalforty.Wizardby.Ci.MSBuild\octalforty.Wizardby.Ci.MSBuild.csproj">
-      <Project>{4D710E16-9464-49BB-9447-20E55A607FAB}</Project>
-      <Name>octalforty.Wizardby.Ci.MSBuild</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\octalforty.Wizardby.Console\octalforty.Wizardby.Console.csproj">
-      <Project>{CA07D421-EC04-4D9F-8936-CACF513500D9}</Project>
-      <Name>octalforty.Wizardby.Console</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\octalforty.Wizardby.Core\octalforty.Wizardby.Core.csproj">
-      <Project>{31A1F1A5-E685-4C89-929D-FDC93CD12BB0}</Project>
-      <Name>octalforty.Wizardby.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\octalforty.Wizardby.Db.SQLite\octalforty.Wizardby.Db.SQLite.csproj">
-      <Project>{3B68C293-E2EC-4783-82D3-49FD2E1FEBDE}</Project>
-      <Name>octalforty.Wizardby.Db.SQLite</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\octalforty.Wizardby.Db\octalforty.Wizardby.Db.csproj">
-      <Project>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</Project>
-      <Name>octalforty.Wizardby.Db</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Waffle.mdl" />
@@ -246,6 +216,27 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\octalforty.Wizardby.Console\octalforty.Wizardby.Console.csproj">
+      <Project>{CA07D421-EC04-4D9F-8936-CACF513500D9}</Project>
+      <Name>octalforty.Wizardby.Console</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\octalforty.Wizardby.Core\octalforty.Wizardby.Core.csproj">
+      <Project>{31A1F1A5-E685-4C89-929D-FDC93CD12BB0}</Project>
+      <Name>octalforty.Wizardby.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\octalforty.Wizardby.Db.SqlServer2008\octalforty.Wizardby.Db.SqlServer2008.csproj">
+      <Project>{4D37A7BE-3D5C-4263-B13D-B29A3186B843}</Project>
+      <Name>octalforty.Wizardby.Db.SqlServer2008</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\octalforty.Wizardby.Db\octalforty.Wizardby.Db.csproj">
+      <Project>{735ADA03-27DA-4C9F-BDAF-21DEEC2DD5C8}</Project>
+      <Name>octalforty.Wizardby.Db</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Core\ReverseEngineering\Impl\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
